--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.125  2015-04-27
+   - change in activiti-rest 5.17: error response use 'exception' instead of 'errorMessage'
+   - send signal to execution
 0.124	 2014-12-05
 	 - add support for retrieval of historic variable instances
 0.123    2014-11-13
